--- a/GTY/Views/Shared/_Layout.cshtml
+++ b/GTY/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br" data-bs-theme="light">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,9 +10,11 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav id="navTema" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">GTY</a>
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index">
+                    <img id="imagemTema" src="~/imagens/GTY-Logo-Crop.png" alt="Logo GTY Claro" height="50">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,12 +22,23 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Oxe
+                            </a>
+                            <ul class="dropdown-menu" id="dropdownMenuTema">
+                                <li><a class="dropdown-item" asp-controller="Oxe" asp-action="Index">Página Inicial</a></li>
+                                <li><a class="dropdown-item" asp-controller="Oxe" asp-action="CadastroPessoa">Novo</a></li>
+                                <li><a class="dropdown-item" asp-controller="Oxe" asp-action="Cidades">Cidades</a></li>
+                            </ul>
                         </li>
                     </ul>
+                    <div class="form-check form-check-reverse form-switch flex-column-reverse">
+                        <input class="form-check-input" type="checkbox" role="switch" id="seletorTema">
+                        <label class="form-check-label" for="seletorTema" id="labelTema">Tema Claro</label>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -38,7 +51,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - GTY - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - GTY
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
