Tela Oxe Index Listagem Criada

--- a/GTY/Views/Oxe/Index.cshtml
+++ b/GTY/Views/Oxe/Index.cshtml
@@ -1,1 +1,47 @@
-﻿
+﻿<div class="display-2 text-center mb-4">
+    Listagem Oxe
+</div>
+
+<div class="d-grid gap-2 mb-4">
+    <button type="button" class="btn btn-primary">Cadastro</button>
+</div>
+
+<div class="table-responsive">
+    <table id="tableTema" class="table">
+        <thead class="align-bottom mb-0">
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Nome</th>
+                <th scope="col">Cidade</th>
+                <th scope="col">Observação</th>
+                <th scope="col" class="text-center w-10"></th>
+            </tr>
+        </thead>
+        <tbody class="align-middle">
+            <tr>
+                <th scope="row">1</th>
+                <td>Julia</td>
+                <td>Matsumura</td>
+                <td>Outlet</td>
+                <td class="text-center w-10">
+                    <div class="btn-group" role="group">
+                        <a role="button" class="btn btn-outline-primary btn-sm" style="margin-right: 5px;">Editar</a>
+                        <a role="button" class="btn btn-outline-danger btn-sm">Excluir</a>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td>Natalia</td>
+                <td>Furakawa</td>
+                <td>38 - Tia Letícia</td>
+                <td class="text-center w-10">
+                    <div class="btn-group" role="group">
+                        <a role="button" class="btn btn-outline-primary btn-sm" style="margin-right: 5px;">Editar</a>
+                        <a role="button" class="btn btn-outline-danger btn-sm">Excluir</a>
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
