Banco OK, Pags OK

--- a/GTY/Views/Oxe/EditarPessoa.cshtml
+++ b/GTY/Views/Oxe/EditarPessoa.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Cadastro Pessoa - Oxe";
+    ViewData["Title"] = "Editar Pessoa - Oxe";
 }
 
 <div class="display-2 text-center mb-4">
-    Cadastro Pessoa
+    Editar Cadastro
 </div>
 
 <form>
@@ -26,6 +26,6 @@
     </div>
     <div class="row w-100 text-center mx-auto">
         <a role="button" class="col btn btn-secondary" style="margin-right: 5px;" asp-controller="Oxe" asp-action="Index">Voltar</a>
-        <a role="button" class="col btn btn-primary">Cadastro</a>
+        <a role="button" class="col btn btn-primary">Editar</a>
     </div>
 </form>
