--- a/GTY/wwwroot/css/site.css
+++ b/GTY/wwwroot/css/site.css
@@ -1,4 +1,5 @@
 html {
+    --bg: white;
   font-size: 14px;
 }
 
@@ -18,6 +19,7 @@ html {
 }
 
 body {
+    background-color: var(--bg);
   margin-bottom: 60px;
 }
 
